<resources>
    <string name="app_name">GoPray</string>
    <string name="nama">Nama</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="passwordlama">Password Lama</string>
    <string name="passwordbaru">Password Baru</string>
    <string name="ulangipassword">Ulangi Password Baru</string>
    <string name="noConnection">Tidak Ada Koneksi</string>
    <string name="KeyPassword" translatable="false">SATULIMAKALI</string>
    <!--<string name="server">http://goprayapi.herokuapp.com</string>-->
    <!--<string name="server">http://192.168.1.20/GoPrayAPI</string>-->
    <string name="server" translatable="false">http://139.59.110.160:88</string>
    <string name="vServer" translatable="false"></string>
    <string name="signin">Masuk</string>
    <string name="signup">Daftar</string>
    <string name="loginFailed">Login Gagal!!</string>
    <string name="prosesLogin">Proses Login..</string>
    <string name="prosesDaftar">Proses Daftar..</string>
    <string name="signupSuccess">Daftar Berhasil!!</string>
    <string name="signupFailed">Gagal Daftar</string>
    <string name="askaccount">Belum Punya Akun?</string>
    <string name="asklogin">Sudah Punya Akun?</string>
    <string name="sholat">Sholat</string>
    <string name="bersama">Bersama</string>
    <string name="tempat">di</string>
    <string name="mengaji">Mengaji</string>
    <string name="sedekah">Sedekah</string>
    <string name="freetext">Free Text</string>
    <string name="save">Simpan</string>
    <string name="dummyToken" translatable="false">8aa560b5efa8691dddcf4a11a69b3d1f98f01280bb6ef6efbd32ca39d9b8ac33</string>
    <string name="dummyPicture" translatable="false">http://s3.amazonaws.com/37assets/svn/765-default-avatar.png</string>
    <string name="facebook_app_id" translatable="false">217154788790940</string>
    <array name="surat">
        <item>Al Fatihah</item>
        <item>Al Baqoroh</item>
        <item>Ali Imron</item>
        <item>An Nisa</item>
        <item>Al Maidah</item>
        <item>Al Anam</item>
        <item>Al Araf</item>
        <item>Al Anfal</item>
        <item>At Taubah</item>
        <item>Yunus</item>
        <item>Hud</item>
        <item>Yusuf</item>
        <item>Ar Rad</item>
        <item>Ibrahim</item>
        <item>Al Hijr</item>
        <item>An Nahl</item>
        <item>Al Israa</item>
        <item>Al Kahfi</item>
        <item>Maryam</item>
        <item>Thahaa</item>
        <item>Al Anbiya</item>
        <item>Al Hajj</item>
        <item>Al Muminun</item>
        <item>An Nur</item>
        <item>Al Furqon</item>
        <item>Asy Syuara</item>
        <item>An Naml</item>
        <item>Al Qashash</item>
        <item>Al Ankabuut</item>
        <item>Ar Ruum</item>
        <item>Luqman</item>
        <item>As Sajdah</item>
        <item>Al Ahzab</item>
        <item>Saba</item>
        <item>Fathir</item>
        <item>Yaasiin</item>
        <item>Ash Shaffat</item>
        <item>Az Zumar</item>
        <item>Al Mumin</item>
        <item>Fushshilat</item>
        <item>Asy Syuura</item>
        <item>Az Zukhruf</item>
        <item>Ad Dukhaan</item>
        <item>Al Jaatsiyah</item>
        <item>Al Ahqaaf</item>
        <item>Muhammad</item>
        <item>Al Fath</item>
        <item>Qaaf</item>
        <item>Adz Dzaariyaat</item>
        <item>Ath Thur</item>
        <item>An Najm</item>
        <item>Al Qamar</item>
        <item>Ar Rahman</item>
        <item>Al Waaqiah</item>
        <item>Al Hadid</item>
        <item>Al Mujadilah</item>
        <item>Al Hasyr</item>
        <item>Al Mumtahanah</item>
        <item>Ash Shaff</item>
        <item>Al Jumuah</item>
        <item>Al Munafiqun</item>
        <item>Ath Taghabun</item>
        <item>Ath Thalaaq</item>
        <item>At Tahrim</item>
        <item>Al Mulk</item>
        <item>Al Qalam</item>
        <item>Al Haqqah</item>
        <item>Al Marij</item>
        <item>Nuh</item>
        <item>Al Jin</item>
        <item>Al Muzzammil</item>
        <item>Al Muddatstsir</item>
        <item>Al Qiyamah</item>
        <item>Al Insaan</item>
        <item>Al Mursalat</item>
        <item>An Naba</item>
        <item>An Naazi</item>
        <item>Abasa</item>
        <item>At Takwir</item>
        <item>Al Infithar</item>
        <item>Al Muthaffifin</item>
        <item>Al Insyiqaaq</item>
        <item>Al Buruuj</item>
        <item>Ath Thariq</item>
        <item>Al Ala</item>
        <item>Al Ghasiyah</item>
        <item>Al Fajr</item>
        <item>Al Balad</item>
        <item>Asy Syams</item>
        <item>Al Lail</item>
        <item>Adh Dhuha</item>
        <item>Al Inyisrah</item>
        <item>At Tiin</item>
        <item>Al Alaq</item>
        <item>Al Qadr</item>
        <item>Al Bayyinah</item>
        <item>Al Zalzalah</item>
        <item>Al Adiyat</item>
        <item>Al Qariah</item>
        <item>At Takatsur</item>
        <item>Al Ashr</item>
        <item>Al Humazah</item>
        <item>Al Fiil</item>
        <item>Quraisy</item>
        <item>Al Maun</item>
        <item>Al Kautsar</item>
        <item>Al Kafirun</item>
        <item>An Nashr</item>
        <item>Al Lahab</item>
        <item>Al Ihklas</item>
        <item>Al Falaq</item>
        <item>An Naas</item>
    </array>
    <array name="puasa">
        <item>Wajib Ramadhan</item>
        <item>Senin Kamis</item>
        <item>Sunnah</item>
    </array>
    <string-array name="versi" translatable="false">
        <item>Versi</item>
    </string-array>

    <string-array name="chat">
        <item></item>
    </string-array>


    <string-array name="preferences" translatable="false">
        <!--<item>Lokasi</item>-->
        <item>Akun</item>
        <!--<item>Notifikasi</item>-->
        <!--<item>Sharing</item>-->
        <!--<item>Efek Suara</item>-->
    </string-array>
    <string-array name="tentang" translatable="false">
        <item>Akun</item>
        <item>Tentang</item>
        <item>Bantuan</item>
        <item>Logout</item>
    </string-array>
    <string name="hapus">Hapus</string>
    <string name="about" translatable="false">GoPray adalah aplikasi untuk meningkatkan semangat dan menjaga konsistensi ibadah Anda. Memiliki fitur-fitur untuk merekam aktivitas ibadah, termasuk sholat, puasa, membaca Al Qur’an, dan sedekah, GoPray adalah teman ibadah harian Anda.\n\nCreate your praylist, and GoPray now!
    </string>
    <string name="helpInfo" translatable="false">
        Jangan Malu Bertanya \n \n Membutuhkan beberapa bantuan ? tentang update sholat, doa, sedekah, puasa, mengaji, orang terdekat.
        Silakan bertanya pada gopray.id
    </string>
    <string name="prosesing">Sedang Diproses..</string>
    <string name="selesai">Selesai!!</string>
    <string name="mengunggah">Sedang Menunggah!!</string>
    <string name="font_name_helvetica_normal" translatable="false">helvetica-normal</string>
    <string name="font_name_source_sans_pro" translatable="false">SourceSansPro</string>
    <string name="nohp">Nomor Telephone</string>
    <string name="nama_kerabat">Nama Kerabat</string>
    <string name="jenis_kerabat">Kerabat</string>
    <string name="captionfreetext">Apa yang kamu rasakan?</string>
    <string-array name="tab_freetext" translatable="false">
        <item>Free Text</item>
        <item>Sticker</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://gopray.id\",\n  }\n}]</string>
</resources>
