<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="138dp"
        app:srcCompat="@mipmap/skype" />


    <EditText
        android:id="@+id/txtNama"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/nama"
        />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/txtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:layout_below="@+id/txtNama"
        android:layout_alignLeft="@+id/txtNama"
        android:layout_alignStart="@+id/txtNama" />

    <EditText
        android:layout_marginTop="10dp"
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/txtEmail"
        android:layout_alignLeft="@+id/txtEmail"
        android:layout_alignStart="@+id/txtEmail" />

    <Button
        android:id="@+id/btnSignup"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:layout_below="@+id/txtPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/txtScreenSignin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnSignup"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:text="@string/signin"
        tools:text="@string/signin" />

</RelativeLayout>