<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="25dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:textColor="@android:color/black"
        android:id="@+id/txtSPassword1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordlama"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/black"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:textColor="@android:color/black"
        android:id="@+id/txtSPassword2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/passwordbaru"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/black"
        android:layout_below="@+id/txtSPassword1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:textColor="@android:color/black"
        android:id="@+id/txtSPassword3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ulangipassword"
        android:inputType="textPassword"
        app:met_baseColor="@android:color/black"
        android:layout_below="@+id/txtSPassword2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>