<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="salam.gopray.id.MainActivity">
    <RelativeLayout
        android:clipToPadding="false"
        android:visibility="visible"
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include
            android:elevation="10dp"
            android:outlineProvider="bounds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            layout="@layout/toolbar_acivity"
            android:id="@+id/include" />
        <RelativeLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/FrameContainer"
            android:layout_below="@+id/include">
            <com.rengwuxian.materialedittext.MaterialEditText
                android:visibility="gone"
                android:hint="@string/jenis_kerabat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etKerabat"
                app:met_floatingLabel="normal"
                app:met_baseColor="@android:color/black"
                android:textColor="@android:color/black"
                />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:visibility="gone"
                android:hint="@string/nama_kerabat"
                app:met_floatingLabel="normal"
                app:met_baseColor="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNama"
                android:layout_below="@+id/etKerabat"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:hint="@string/email"
                app:met_floatingLabel="normal"
                app:met_baseColor="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etEmail"
                android:layout_below="@+id/etNama"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <com.rengwuxian.materialedittext.MaterialEditText
                android:visibility="gone"
                android:hint="@string/nohp"
                app:met_floatingLabel="normal"
                app:met_baseColor="@android:color/black"
                android:textColor="@android:color/black"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etNoHp"
                android:layout_below="@+id/etEmail"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />

            <Button
                android:id="@+id/btnAddKerabat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Tambah Kerabat"
                android:layout_below="@+id/etNoHp"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="9dp" />
        </RelativeLayout>
    </RelativeLayout>
</android.support.design.widget.AppBarLayout>